--- a/docs/ise-implementation.tex
+++ b/docs/ise-implementation.tex
@@ -3,7 +3,7 @@
 \usepackage{shared}
 
 \usepackage{biblatex}
-\addbibresource{references.bib}
+\addbibresource{shared.bib}
 
 \title{SCARV: RISC-V Crypto ISE \\ Reference Implementation}
 
