--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,5 +1,4 @@
 @article{SCARV:GYCH:18,
-  keywords     = KEYWORDS,
   author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
   title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
   journal      = {Journal of Cryptographic Engineering (JCEN)},
@@ -46,14 +45,22 @@
 }
 
 
-@article{SCARV:LeeFis:05
+@article{SCARV:LeeFis:05,
   author       = {R.B. Lee and A.M. Fiskiran},
   title        = {{PLX}: An Instruction Set Architecture and Testbed for Multimedia Information Processing},
-  journal      = {VLSI Signal Processing Systems for Signal, Image and Video Technology}
+  journal      = {VLSI Signal Processing Systems for Signal, Image and Video Technology},
   volume       = {40},
   number       = {1},
   pages        = {85--108},
   year         = {2005}
+}
+
+@techreport{SCARV:SiFive:rocketE31,
+  author       = {SiFive Inc.},
+  title        = {{E31} Core Complex Manual},
+  number       = {v2p0},
+  year         = {2018},
+  url          = {http://www.sifive.com/documentation/risc-v-core/e31-risc-v-core-ip-manual},
 }
 
 @techreport{SCARV:XS1:09,
@@ -88,3 +95,77 @@
   year         = {2018},
   url          = {http://arxiv.org/abs/1806.07480}
 }
+
+@article{SCARV:Mittal:16,
+  author       = {S. Mittal},
+  title        = {A Survey of Techniques for Architecting and Managing Asymmetric Multicore Processors},
+  journal      = {ACM Computing Surveys},
+  volume       = {48},
+  number       = {3},
+  pages        = {45:1--45:38},
+  year         = {2016}
+}
+
+@inproceedings{SCARV:RKLMR:03,
+  author    = {S. Ravi and P.C. Kocher and R.B. Lee and G. McGraw and A. Raghunathan},
+  title     = {Security as a new dimension in embedded system design},
+  booktitle = {Design Automation Conference (DAC)},
+  pages     = {753--760},
+  year      = {2004}
+}
+
+@article{SCARV:RRKH:04,
+  author    = {S. Ravi and A. Raghunathan and P.C. Kocher and S. Hattangady},
+  title     = {Security in embedded systems: Design challenges},
+  journal   = {ACM Transactions on Embedded Computer Systems},
+  volume    = {3},
+  number    = {3},
+  pages     = {461--491},
+  year      = {2004}
+}
+
+@inproceedings{SCARV:BurMutTiw:16,
+  author    = {W. Burleson and O. Mutlu and M. Tiwari},
+  title     = {Who is the major threat to tomorrow's security?  You, the hardware designer},
+  booktitle = {DAC},
+  year      = {2016}
+}
+
+% =============================================================================
+
+@inproceedings{SCARV:Gutmann:00,
+  author      = {P. Gutmann},
+  title       = {An Open-source Cryptographic Coprocessor},
+  booktitle   = {USENIX Security Symposium},
+  pages       = {8:1--8:16},
+  year        = {2000}
+}
+
+@inproceedings{SCARV:FazLopOli:18,
+  author      = {A. Faz-Hernandez and J. L\'{o}pez and A.K.D.S. de Oliveira},
+  title       = {{SoK}: A Performance Evaluation of Cryptographic Instruction Sets on Modern Architectures},
+  booktitle   = {ASIA Public-Key Cryptography Workshop (APKC)},
+  pages       = {9--18},
+  year        = {2018}
+} 
+
+@inproceedings{SCARV:RegIen:16,
+  author       = {F. Regazzoni and P. Ienne},
+  title        = {Instruction Set Extensions for Secure Applications},
+  booktitle    = {DATE},
+  pages        = {1529--1534},
+  year         = {2016}
+}
+
+@incollection{SCARV:BarGioMar:09,
+  author       = {S. Bartolini and R. Giorgi and E. Martinelli},
+  title        = {Instruction Set Extensions for Cryptographic Applications},
+  chapter      = {9},
+  pages        = {191--233},
+  editor       = {{\c{C}.K. Ko\c{c}}},
+  booktitle    = {Cryptographic Engineering},
+  publisher    = {Springer},
+  year         = {2009}
+}
+
+% =============================================================================
