--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -39,7 +39,7 @@
 \usetikzlibrary{decorations.text}
 \usetikzlibrary{fit}
 
-% -----------------------------------------
+% =============================================================================
 
 % Design choice notes
 \newcommand{\designnote}[1]{\footnote{#1}}
@@ -89,9 +89,10 @@
 \end{bytefield}
 \end{figure}}
 
+% =============================================================================
 
-% -----------------------------------------
-
+% ISE name
+\newcommandx{\ISE}{XCrypto}
 % calligraphic (e.g., for mathematical spaces)
 \newcommandx{\C}[1]{\ensuremath{\mathcal #1}\xspace}
 % black board  (e.g., for mathematical structures)
@@ -166,6 +167,13 @@
 \newcommandx{\GPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  GPR}[{#2}]     }{{\sf   GPR}}}\xspace}
 \newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  CPR}[{#2}]     }{{\sf   CPR}}}\xspace}
 \newcommandx{\SPR}[3][     2={},3={}]{{\ensuremath\IfEq{#2}{*}{{\sf   #1}[{#3}]     }{{\sf    #1}}}\xspace}
+% references
+\newcommandx{\SEC}[1][1={}]{\IfEq{#1}{s}{Sections}{Section}\xspace}
+\newcommandx{\TAB}[1][1={}]{\IfEq{#1}{s}{Tables}{Table}\xspace}
+\newcommandx{\FIG}[1][1={}]{\IfEq{#1}{s}{Figures}{Figure}\xspace}
+\newcommandx{\REFSEC}[1]{\SEC~\ref{#1}\xspace}
+\newcommandx{\REFTAB}[1]{\TAB~\ref{#1}\xspace}
+\newcommandx{\REFFIG}[1]{\FIG~\ref{#1}\xspace}
 
 % set (approximate) styles
 \lstalias{RV}{C}
@@ -210,3 +218,5 @@
 \newcommand\undermat[2]{%
   \makebox[0pt][l]{$\smash{\underbrace{\phantom{%
     \begin{matrix}#2\end{matrix}}}_{\text{$#1$}}}$}#2}
+
+% =============================================================================
