Content reorganisation step ...

--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -26,6 +26,16 @@
   year         = {2003}
 }
 
+@inproceedings{SCARV:TilGro:06,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
+  title        = {Instruction Set Extensions for Efficient {AES} Implementation on {32-bit} Processors},
+  publisher    = {Springer-Verlag},
+  issue        = {LNCS 4249},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  pages        = {270--284},
+  year         = {2006}
+}
+
 @inproceedings{SCARV:GroKam:04,
   author       = {J. Gro{\ss}sch{\"a}dl and G.-A. Kamendje},
   title        = {Optimized {RISC} Architecture for Multiple-Precision Modular Arithmetic},
@@ -43,7 +53,6 @@
   pages        = {102--107},
   year         = {2008}
 }
-
 
 @article{SCARV:LeeFis:05,
   author       = {R.B. Lee and A.M. Fiskiran},
