--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -92,7 +92,7 @@
 % =============================================================================
 
 % ISE name
-\newcommandx{\ISE}{XCrypto}
+\newcommandx{\ISE}{{\sf XCrypto}\xspace}
 % calligraphic (e.g., for mathematical spaces)
 \newcommandx{\C}[1]{\ensuremath{\mathcal #1}\xspace}
 % black board  (e.g., for mathematical structures)
